ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.5
    • Affects Version/s: 3.6.4
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Hide

      3.4 upgrade to 3.6.4 and try to downgrade, when config.system.session exists

      Show
      3.4 upgrade to 3.6.4 and try to downgrade, when config.system.session exists
    • Sharding 2018-05-07, Sharding 2018-05-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Hi

      I made an update of my RS from 3.4.1 to 3.6.4,
      but application where not using newest driver yet,
      so I was enforced to downgrade back
      (acc to docu, I have chosen the newest 3.4.14 ).

      Downgrade was not possible. Even with data removal (enforce "scratch-replication").
      I constantly got error, about config.system.session collection :

      018-04-25T17:21:01.319+0200 F REPL     [repl writer worker 1] writer worker caught exception: 10156 cannot update system collection: config.system.sessions q: { _id: { id: BinData(4, 96E23194367D482B81B1D75B6423AFBD), uid: BinData(0, EEDC58CB4933CBA895757E2FD8275E869A732F964407D28FA4D462EE4FC5B046) } } u: { $set: { lastUse: new Date(1524669659199) } } on: { ts: Timestamp 1524669659000|10, t: 39, h: 6122200662662238595, v: 2, op: "u", ns: "config.system.sessions", o2: { _id: { id: BinData(4, 96E23194367D482B81B1D75B6423AFBD), uid: BinData(0, EEDC58CB4933CBA895757E2FD8275E869A732F964407D28FA4D462EE4FC5B046) } }, wall: new Date(1524669659197), o: { $set: { lastUse: new Date(1524669659199) } } }
      2018-04-25T17:21:01.319+0200 I -        [repl writer worker 1] Fatal assertion 16359 Location10156: cannot update system collection: config.system.sessions q: { _id: { id: BinData(4, 96E23194367D482B81B1D75B6423AFBD), uid: BinData(0, EEDC58CB4933CBA895757E2FD8275E869A732F964407D28FA4D462EE4FC5B046) } } u: { $set: { lastUse: new Date(1524669659199) } } at src/mongo/db/repl/sync_tail.cpp 1082
      2018-04-25T17:21:01.319+0200 F REPL     [repl writer worker 15] writer worker caught exception: 10156 cannot update system collection: config.system.sessions q: { _id: { id: BinData(4, F7749D80D99044C18AEC4F16DB0841A6), uid: BinData(0, 575CD72AF2368BDED794D83BD07BA14894021281F75D97BE815F1FE5D795D1E1) } } u: { $set: { lastUse: new Date(1524669659199) } } on: { ts: Timestamp 1524669659000|6, t: 39, h: 9214092136229990651, v: 2, op: "u", ns: "config.system.sessions", o2: { _id: { id: BinData(4, F7749D80D99044C18AEC4F16DB0841A6), uid: BinData(0, 575CD72AF2368BDED794D83BD07BA14894021281F75D97BE815F1FE5D795D1E1) } }, wall: new Date(1524669659197), o: { $set: { lastUse: new Date(1524669659199) } } }
      2018-04-25T17:21:01.319+0200 I -        [repl writer worker 1]
      
      ***aborting after fassert() failure
      

      I have even tried to drop the collection and db config
      but it was recreated.

            Assignee:
            Misha Tyulenev (Inactive)
            Reporter:
            Wojciech Sielski
            Votes:
            0 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved: