SERVER-34683 drop config.system.sessions on downgrade to 3.4