src/mongo/db/commands/set_feature_compatibility_version_command.cpp
@@ -45,10 +45,13 @@
 #include "mongo/db/repl/replication_coordinator_global.h"
 #include "mongo/db/s/sharding_state.h"
 #include "mongo/db/server_options.h"
+#include "mongo/db/sessions_collection.h"
 #include "mongo/rpc/get_status_from_command_result.h"
 #include "mongo/s/catalog/sharding_catalog_client_impl.h"
 #include "mongo/s/catalog/sharding_catalog_manager.h"
+#include "mongo/s/catalog_cache.h"
 #include "mongo/s/client/shard_registry.h"
+#include "mongo/s/grid.h"
 #include "mongo/util/exit.h"
 #include "mongo/util/fail_point_service.h"
 #include "mongo/util/scopeguard.h"
@@ -241,14 +244,49 @@ public:
                 exitCleanly(EXIT_CLEAN);
             }
 
-            // If config server, downgrade shards *before* downgrading self.
             if (serverGlobalParams.clusterRole == ClusterRole::ConfigServer) {
+                // If config server, downgrade shards *before* downgrading self.
                 uassertStatusOK(
                     ShardingCatalogManager::get(opCtx)->setFeatureCompatibilityVersionOnShards(
                         opCtx,
                         Command::appendMajorityWriteConcern(Command::appendPassthroughFields(
                             cmdObj,
                             BSON(FeatureCompatibilityVersion::kCommandName << requestedVersion)))));
+
+                // Drop config.system.sessions collection on downgrade.
+                auto const catalogClient = Grid::get(opCtx)->catalogClient();
+                auto const catalogCache = Grid::get(opCtx)->catalogCache();
+                Seconds waitFor(DistLockManager::kDefaultLockTimeout);
+
+                auto backwardsCompatibleDbDistLock =
+                    uassertStatusOK(catalogClient->getDistLockManager()->lock(
+                        opCtx,
+                        SessionsCollection::kSessionsNamespaceString.db() + "-movePrimary",
+                        "dropCollection",
+                        waitFor));
+
+                auto dbDistLock = uassertStatusOK(catalogClient->getDistLockManager()->lock(
+                    opCtx,
+                    SessionsCollection::kSessionsNamespaceString.db(),
+                    "dropCollection",
+                    waitFor));
+
+                auto collDistLock = uassertStatusOK(catalogClient->getDistLockManager()->lock(
+                    opCtx,
+                    SessionsCollection::kSessionsNamespaceString.ns(),
+                    "dropCollection",
+                    waitFor));
+
+                ON_BLOCK_EXIT([&catalogCache] {
+                    catalogCache->invalidateShardedCollection(
+                        SessionsCollection::kSessionsNamespaceString);
+                });
+
+                auto dropCollStatus = catalogClient->dropCollection(
+                    opCtx, SessionsCollection::kSessionsNamespaceString);
+                if (dropCollStatus != ErrorCodes::NamespaceNotFound) {
+                    uassertStatusOK(dropCollStatus);
+                }
             }
 
             // Stop the background key generator thread from running before trying to drop the
