src/mongo/db/sessions_collection_config_server.cpp
@@ -34,6 +34,8 @@
 
 #include "mongo/client/query.h"
 #include "mongo/db/commands.h"
+#include "mongo/db/commands/feature_compatibility_version.h"
+#include "mongo/db/concurrency/d_concurrency.h"
 #include "mongo/db/dbdirectclient.h"
 #include "mongo/db/logical_session_id.h"
 #include "mongo/db/operation_context.h"
@@ -63,8 +65,7 @@ Status SessionsCollectionConfigServer::_shardCollectionIfNeeded(OperationContext
 
     // First, shard the sessions collection to create it.
     ConfigsvrShardCollectionRequest shardCollection;
-    shardCollection.set_configsvrShardCollection(
-        NamespaceString(SessionsCollection::kSessionsFullNS.toString()));
+    shardCollection.set_configsvrShardCollection(SessionsCollection::kSessionsNamespaceString);
     shardCollection.setKey(BSON("_id" << 1));
 
     DBDirectClient client(opCtx);
@@ -78,13 +79,12 @@ Status SessionsCollectionConfigServer::_shardCollectionIfNeeded(OperationContext
 }
 
 Status SessionsCollectionConfigServer::_generateIndexesIfNeeded(OperationContext* opCtx) {
-    auto res =
-        scatterGatherOnlyVersionIfUnsharded(opCtx,
-                                            SessionsCollection::kSessionsDb.toString(),
-                                            NamespaceString(SessionsCollection::kSessionsFullNS),
-                                            SessionsCollection::generateCreateIndexesCmd(),
-                                            ReadPreferenceSetting::get(opCtx),
-                                            Shard::RetryPolicy::kNoRetry);
+    auto res = scatterGatherOnlyVersionIfUnsharded(opCtx,
+                                                   SessionsCollection::kSessionsDb.toString(),
+                                                   SessionsCollection::kSessionsNamespaceString,
+                                                   SessionsCollection::generateCreateIndexesCmd(),
+                                                   ReadPreferenceSetting::get(opCtx),
+                                                   Shard::RetryPolicy::kNoRetry);
     return res.getStatus();
 }
 
@@ -100,6 +100,13 @@ Status SessionsCollectionConfigServer::setupSessionsCollection(OperationContext*
         // Note: if there is a config server election, it's possible that two different
         // primaries could both run the createIndexes scatter-gather query; this is ok.
         if (_collectionSetUp) {
+            return Status::OK();
+        }
+
+        Lock::SharedLock lk(opCtx->lockState(), FeatureCompatibilityVersion::fcvLock);
+        // Prevent recreating the collection on downgrade.
+        if (serverGlobalParams.featureCompatibility.getVersion() !=
+            ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo36) {
             return Status::OK();
         }
 
