jstests/libs/sessions_collection.js
@@ -4,12 +4,17 @@
  * Validates that the sessions collection exists if we expect it to,
  * and has a TTL index on the lastUse field, if we expect it to.
  */
-function validateSessionsCollection(conn, collectionExists, indexExists) {
+function validateSessionsCollection(conn, collectionExists, indexExists, assertIfNotExists = true) {
     var config = conn.getDB("config");
 
     var info = config.getCollectionInfos({name: "system.sessions"});
     var size = collectionExists ? 1 : 0;
-    assert.eq(info.length, size);
+
+    if (assertIfNotExists) {
+        assert.eq(info.length, size);
+    } else {
+        return (info.length != size);
+    }
 
     var indexes = config.system.sessions.getIndexes();
     var found = false;
@@ -24,10 +29,14 @@ function validateSessionsCollection(conn, collectionExists, indexExists) {
         }
     }
 
-    if (indexExists) {
-        assert(collectionExists);
-        assert(found, "expected sessions collection TTL index to exist");
+    if (assertIfNotExists) {
+        if (indexExists) {
+            assert(collectionExists);
+            assert(found, "expected sessions collection TTL index to exist");
+        } else {
+            assert(!found, "TTL index on sessions collection exists");
+        }
     } else {
-        assert(!found, "TTL index on sessions collection exists");
+        return (indexExists != found);
     }
 }
