jstests/multiVersion/causal_consistency_upgrade_cluster.js
@@ -7,6 +7,7 @@
     "use strict";
 
     load("jstests/multiVersion/libs/multi_rs.js");
+    load("jstests/libs/sessions_collection.js");
     load("jstests/multiVersion/libs/multi_cluster.js");
     load("jstests/multiVersion/libs/causal_consistency_helpers.js");
 
@@ -151,6 +152,15 @@
     res = assert.commandWorked(st.s.getDB("test").runCommand(
         {find: "foo", readConcern: {level: "majority", afterClusterTime: operationTime}}));
     assert.eq(res.cursor.firstBatch, [{_id: 2, x: 2}]);
+
+    // force config server to create sessions collection
+    assert.commandWorked(
+        st.configRS.getPrimary().getDB('admin').runCommand({refreshLogicalSessionCacheNow: 1}));
+    // system.sessions collection can never be on config server.
+    validateSessionsCollection(st.configRS.getPrimary(), false, false, true);
+    // The system sessions collection should have been created on some shard.
+    assert(validateSessionsCollection(st.rs0.getPrimary(), true, true, false) ||
+           validateSessionsCollection(st.rs1.getPrimary(), true, true, false));
 
     st.stop();
 })();
